--- a/qiyexiaohao/contactDetail.html
+++ b/qiyexiaohao/contactDetail.html
@@ -22,7 +22,7 @@
 				<div class="detail_body">
 					<div class="mui-pull-right span_right" @tap=""><span class="mui-icon iconfont icon-dingdan-duanxin"></span></div>
 					<div class="detail_body_h" @tap="toTel()">
-						<span class="color_333 font_16">13510792830</span>
+						<span class="color_333 font_16">王大锤</span>
 						<span class="i_flag">副1</span>
 					</div>
 					<div class="detail_body_b font-size-12" @tap="toTel()">广东广州 </div>
@@ -39,6 +39,18 @@
 									<span class="color_333 font_16">13510792830</span>
 									<span class="i_flag">副1</span>
 									<p>广东广州 </p>
+								</div>
+							</li>
+							<li class="mui-table-view-cell mui-media">
+								<div class="mui-media-body">
+									<span class="color_333 font_16">公司</span>
+									<p>有限公司</p>
+								</div>
+							</li>
+							<li class="mui-table-view-cell mui-media">
+								<div class="mui-media-body">
+									<span class="color_333 font_16">职位</span>
+									<p>董事长</p>
 								</div>
 							</li>
 						</ul>
