--- a/qiyexiaohao/loginOfC.html
+++ b/qiyexiaohao/loginOfC.html
@@ -97,8 +97,9 @@
 	<script src="js/mui.min.js"></script>
 	<script type="text/javascript" src="js/vue.min.js"></script>
 	<script type="text/javascript" src="js/vue-html5plus.js"></script>
-	<script type="text/javascript" src="js/js_des.js" ></script>
 	<script type="text/javascript" src="js/md5.js" ></script>
+	<!--<script type="text/javascript" src="js/js_des.js" ></script>-->
+	<script type="text/javascript" src="js/des.js" ></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
