--- a/qiyexiaohao/msgList.html
+++ b/qiyexiaohao/msgList.html
@@ -9,151 +9,7 @@
 		<link rel="stylesheet" href="css/mint-ui-style.css" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
-		<style>
-			.mui-bar-nav~.mui-content{
-				padding-bottom: 3.75rem;
-			}
-			.mui-input-row label~input {
-				width: 65%;
-				float: left;
-			}
-			
-			.mui-input-row label[class='f'] {
-				font-family: 'Helvetica Neue', Helvetica, sans-serif;
-				line-height: 1.1;
-				float: right;
-				width: 10%;
-				padding: 11px 15px;
-			}
-			
-			footer {
-				position: fixed;
-				width: 100%;
-				height: auto;
-				min-height: 3.12rem;
-				border-top: solid 1px #bbb;
-				left: 0;
-				bottom:-2px;
-				overflow: hidden;
-				padding: 0 3.12rem;
-				background-color: #fafafa;
-			}
-			
-			.footer-left {
-				position: absolute;
-				width: 3.12rem;
-				height: 3.12rem;
-				left: 0;
-				top: 0;
-				text-align: center;
-				vertical-align: middle;
-				line-height: 100%;
-				padding: 0.75rem 0.25rem;
-			}
-			
-			.footer-center .input-text {
-				/*background: #fff;*/
-				border: solid 1px #ddd;
-				padding:  0.93rem 0.31rem 0.31rem 3.12rem !important;
-				font-size: 0.75rem !important;
-				line-height:0.62rem !important;
-				font-family: verdana !important;
-				overflow: hidden;
-			}
-			
-			.footer-center [class*=input] {
-				width: 100%;
-				height: 100%;
-				border-radius: 5px;
-			}
-			
-			.footer-center {
-				height: 100%;
-				padding: 0.31rem 0 0;
-			}
-			
-			footer .iconfont {
-				font-size: 1.25rem;
-				margin: 0.31rem 0 0;
-			}
-			
-			.footer-right {
-				position: absolute;
-				width: 3.12rem;
-				height: 3.12rem;
-				right: 0;
-				top: 0;
-				border: 0;
-			}
-			
-			textarea {
-				margin-bottom: 0;
-			}
-			
-			.flag {
-				position: relative;
-				bottom: 1.25rem;
-				left: 2.81rem;
-			}
-			
-			.mui-input-row label {
-				line-height: 1.25rem;
-				height: 2.5rem;
-			}
-			
-			.right .time {
-				margin: 1.25rem 0.62rem 0 0;
-			}
-			
-			.left .time {
-				margin: 1.25rem 0 0 0.62rem;
-			}
-			
-			.content {
-				position: relative;
-				border-radius: 5px;
-				padding: 0.62rem;
-				display: inline-block;
-				text-align: justify;
-				max-width: 80%;
-				width: auto;
-				word-wrap: break-word;
-				word-break: break-all;
-			}
-			
-			.rightContent {
-				margin-right: 0;
-				color: #fff;
-				background: #00acf8;
-				right: 0.62rem;
-			}
-			
-			.leftContent {
-				position: relative;
-				margin-left: 0.62rem;
-				background: #FFFFFF;
-				border: 1px solid #DEDEDE;
-			}
-			
-			.right {
-				margin-top: 0;
-				text-align: right;
-			}
-			
-			.dialogDiv {
-				position: relative;
-			}
-			
-			.dialogDiv.left .i_flag_f {
-				position: absolute;
-				top: 50%;
-			}
-			
-			.dialogDiv.right .i_flag_f {
-				margin: 0 0.62rem 0 0;
-				padding: 0.43rem 0.12rem;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style/msg.css" />
 	</head>
 
 	<body>
