--- a/qiyexiaohao/sendMsg.html
+++ b/qiyexiaohao/sendMsg.html
@@ -8,99 +8,7 @@
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="css/common.css" />
 		<link rel="stylesheet" href="css/iconfont.css" />
-		<style>
-			.mui-input-row label~input {
-				width: 65%;
-				float: left;
-			}
-			
-			.mui-input-row label[class='f'] {
-				font-family: 'Helvetica Neue', Helvetica, sans-serif;
-				line-height: 1.1;
-				float: right;
-				width: 10%;
-				padding: 11px 15px;
-			}
-			
-			footer {
-				position: fixed;
-				width: 100%;
-				height: auto;
-				min-height: 50px;
-				border-top: solid 1px #bbb;
-				left: 0;
-				bottom: 0;
-				overflow: hidden;
-				padding: 0 50px;
-				background-color: #fafafa;
-			}
-			
-			.footer-left {
-				position: absolute;
-				width: 50px;
-				height: 50px;
-				left: 0;
-				top: 0;
-				text-align: center;
-				vertical-align: middle;
-				line-height: 100%;
-				padding: 12px 4px;
-			}
-			
-			.footer-center .input-text {
-				background: #fff;
-				border: solid 1px #ddd;
-				padding: 10px 10px 5px 50px !important;
-				font-size: 16px !important;
-				line-height: 18px !important;
-				font-family: verdana !important;
-				overflow: hidden;
-			}
-			
-			.footer-center [class*=input] {
-				width: 100%;
-				height: 100%;
-				border-radius: 5px;
-			}
-			
-			.footer-center {
-				height: 100%;
-				padding: 5px 0 0;
-			}
-			
-			footer .iconfont {
-				font-size: 20px;
-				margin: 5px 0 0;
-			}
-			
-			.footer-right {
-				position: absolute;
-				width: 50px;
-				height: 50px;
-				right: 0;
-				top: 0;
-				text-align: center;
-				vertical-align: middle;
-				line-height: 100%;
-				padding: 12px 5px;
-				display: inline-block;
-			}
-			
-			textarea {
-				margin-bottom: 0;
-			}
-			
-			.flag {
-				position: relative;
-				bottom: 20px;
-				left: 45px;
-			}
-			
-			.mui-input-row label {
-				line-height: 20px;
-				height: 40px;
-			}
-		</style>
+		<link rel="stylesheet" href="css/style/msg.css" />
 	</head>
 
 	<body>
@@ -119,16 +27,16 @@
 					</div>
 				</form>
 				<footer>
-					<div  @tap="change()" class="footer-left">
+					<div @tap="change()" class="footer-left">
 						<i class="mui-icon iconfont icon-xunhuan"></i>
 						<span v-bind:class="[isMain ? i_flag : i_flag_2,'flag']">{{cardType}}</span>
 					</div>
 					<div class="footer-center">
 						<textarea type="text" class='input-text' placeholder="输入内容" v-model="msgBody"></textarea>
 					</div>
-					<label class="footer-right">
-					<i class="mui-icon iconfont icon-duanxinfasongjiantou"></i>
-				</label>
+					<button class="footer-right">
+						<i class="mui-icon iconfont icon-duanxinfasongjiantou"></i>
+					</button>
 				</footer>
 			</div>
 		</div>
