增加crypro-js 的des加密
增加crypro-js 的des加密

--- a/qiyexiaohao/loginOfC.html
+++ b/qiyexiaohao/loginOfC.html
@@ -98,8 +98,7 @@
 	<script type="text/javascript" src="js/vue.min.js"></script>
 	<script type="text/javascript" src="js/vue-html5plus.js"></script>
 	<script type="text/javascript" src="js/md5.js" ></script>
-	<!--<script type="text/javascript" src="js/js_des.js" ></script>-->
-	<script type="text/javascript" src="js/des.js" ></script>
+	<script type="text/javascript" src="js/des/crypto-js.js" ></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
