--- a/qiyexiaohao/center/feedback.html
+++ b/qiyexiaohao/center/feedback.html
@@ -28,8 +28,8 @@
 	<script type="text/javascript" src="../js/vue.min.js"></script>
 	<script type="text/javascript" src="../js/vue-tap.js"></script>
 	<script type="text/javascript" src="../js/vue-html5plus.js"></script>
-	<script type="text/javascript" src="../js/js_des.js"></script>
 	<script type="text/javascript" src="../js/md5.js"></script>
+	<script type="text/javascript" src="../js/des/crypto-js.js" ></script>
 	<script type="text/javascript" src="../js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
@@ -65,13 +65,13 @@
 								user_token: user_token,
 								content: self.content
 							}
-							var stringSignTemp = "app=Feedback&class=Save&client=web&content=" + self.content + "identifier=" + identifier + "&nonce_str=" + nonce_str + "&timestamp=" + timestamp + "&user_token=" + user_token + "&";
+							var stringSignTemp = "app=Feedback&class=Save&client=web&content=" + self.content + "&identifier=" + identifier + "&nonce_str=" + nonce_str + "&timestamp=" + timestamp + "&user_token=" + user_token + "&";
 							u.mypost(pdata, stringSignTemp, true, function(data) {
 								if(data.status == 0) {
 									_.toast("反馈成功");
 									_.later(function() {
 										_.back();
-									}, 1000)
+									}, 500)
 								} else {
 									_.toast(data.msg || '请求异常');
 								}
