--- a/qiyexiaohao/center/kefu.html
+++ b/qiyexiaohao/center/kefu.html
@@ -81,8 +81,8 @@
 	<script src="../js/mui.min.js"></script>
 	<script type="text/javascript" src="../js/vue.min.js"></script>
 	<script type="text/javascript" src="../js/vue-html5plus.js"></script>
-	<script type="text/javascript" src="../js/js_des.js" ></script>
 	<script type="text/javascript" src="../js/md5.js" ></script>
+	<script type="text/javascript" src="../js/des/crypto-js.js" ></script>
 	<script type="text/javascript" src="../js/common.js"></script>
 	<script type="text/javascript">
 		(function(_, w, u) {
