修改msg页面 div模拟textear
修改msg页面 div模拟textear

--- a/qiyexiaohao/main.html
+++ b/qiyexiaohao/main.html
@@ -335,27 +335,27 @@
 						})
 					},
 					toggleTabbar: function() {
-						var viewStyle = currentWeb.getStyle();//toggle隐藏tabbar
-						console.log("viewStyle.bottom==" + viewStyle.bottom);
-						if(viewStyle.bottom == 0){
-			                currentWeb.setStyle({bottom:bottom});
-			            }else{
-			                currentWeb.setStyle({bottom:0});
-			            }
+//						var viewStyle = currentWeb.getStyle();//toggle隐藏tabbar
+//						console.log("viewStyle.bottom==" + viewStyle.bottom);
+//						if(viewStyle.bottom == 0){
+//			                currentWeb.setStyle({bottom:bottom});
+//			            }else{
+//			                currentWeb.setStyle({bottom:0});
+//			            }
 					},
 					hiddenTabbar: function() {
-						var viewStyle = currentWeb.getStyle();//动态隐藏tabbar
-						console.log("hiddenTabbar viewStyle.bottom==" + viewStyle.bottom);
-						if(viewStyle.bottom != 0){
-			                currentWeb.setStyle({bottom:'0'});
-			            }
+//						var viewStyle = currentWeb.getStyle();//动态隐藏tabbar
+//						console.log("hiddenTabbar viewStyle.bottom==" + viewStyle.bottom);
+//						if(viewStyle.bottom != 0){
+//			                currentWeb.setStyle({bottom:'0'});
+//			            }
 					},
 					showTabbar: function() {
-						var viewStyle = currentWeb.getStyle();//动态显示tabbar
-						console.log("showTabbar viewStyle.bottom==" + viewStyle.bottom);
-						if(viewStyle.bottom == 0){
-			                currentWeb.setStyle({bottom:bottom});
-			            }
+//						var viewStyle = currentWeb.getStyle();//动态显示tabbar
+//						console.log("showTabbar viewStyle.bottom==" + viewStyle.bottom);
+//						if(viewStyle.bottom == 0){
+//			                currentWeb.setStyle({bottom:bottom});
+//			            }
 					},
 					backAll:function(){
 						self.filter_resultShow=false;
