--- a/qiyexiaohao/msgList.html
+++ b/qiyexiaohao/msgList.html
@@ -16,7 +16,6 @@
 				min-height: 45px;
 				max-height: 100px;
 				line-height: 1.12rem;
-				_height: 45px;
 				margin-left: auto;
 				margin-right: auto;
 				padding: 3px 3px 3px 40px;
@@ -24,8 +23,7 @@
 				border: 1px solid #bbb;
 				word-wrap: break-word;
 				overflow-x: hidden;
-				overflow-y: auto;
-				_overflow-y: visible;
+				overflow-y: hidden;
 				font-size: 0.75rem
 			}
 		</style>
